# ameliavoice

./: .env.sample  .gitignore  README.md  Taskfile.yaml  pyproject.toml  spec.md  twilio_integration.md
backend/: __init__.py  asr_models.py  audio_utils.py  google_stt_service.py  main.py  tts_service.py  twilio_audio.py  twilio_stream.py  utils.py  voice_calls.py  voice_calls_live.py  voice_prompt.py  wer_utils.py  whisper_stt_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useVoiceCallLive.ts  useVoiceConversation.ts
frontend/src/locales/: en.json  ja.json
frontend/src/pages/: ChatPage.tsx  VoiceCallDetail.tsx  VoiceCallsList.tsx
frontend/src/state/: chat.ts  settings.ts
frontend/src/utils/: stripMarkdown.ts
